# asthma_WA

./: .gitignore  main.py  pyproject.toml  requirements.txt
asthmawa/: scrapy.cfg
asthmawa/asthmawa/: items.py  middlewares.py  pipelines.py  settings.py
asthmawa/asthmawa/spiders/: airq.py  districts.py  incident.py  localgovs.py  warning.py
