[tool.poetry]
name = "arthma_WA"
version = "0.1.0"
description = ""
authors = ["Mark Krymov <krymov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyairtable = "^1.0.0"
python-decouple = "^3.5"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
